# UpworkAutomation

./: .env.example  .gitignore  DEVELOPER.md  README.md  Start Upwork Proposal Strategist (Debug).bat  Start Upwork Proposal Strategist.bat  Start UpworkProposalStrategist (Debug).bat  Start UpworkProposalStrategist.vbs  Uninstall Upwork Proposal Strategist.bat  desktop_app.py  pyproject.toml  requirements-windows.txt  requirements.txt
.streamlit/: config.toml
app/: config.py  main.py  paths.py
app/models/: provider_models.py  schemas.py
app/prompts/: proposal_prompt.py  system_prompt.py  verification_prompt.py
app/services/: api_gate.py  beginner_evaluator.py  dossier_reader.py  evidence_index.py  folder_validator.py  llm_client.py  match_engine.py  proposal_generator.py  recommendation.py  scoring.py  screenshot_parser.py  verification.py
app/ui/: __init__.py  analysis_screen.py  api_usage_panel.py  confirmation_screen.py  dossier_screen.py  output_screen.py  proposal_screen.py  screenshot_screen.py  setup_screen.py  theme.py
app/utils/: file_utils.py  logging_utils.py  redaction.py
build_assets/: make_icon.py
docs/: FIRST_TIME_SETUP_GUIDE.md  QUICK_START_GUIDE.md
knowledgebase/: README.md  upwork-proposal-strategist-build-plan-v2.md
sample_dossier/: TEMPLATE_dossier.json
scripts/: ensure_runtime.bat  package.sh  prepare_bundle.bat  prepare_bundle.sh  run.bat
tests/: test_analysis_heads_up.py  test_api_gate.py  test_audit_fixes.py  test_backend_confirmation.py  test_beginner_evaluator.py  test_config_form.py  test_debug_panel_visibility.py  test_dossier_read_button.py  test_dossier_reader.py  test_dynamic_scoring.py  test_env_and_api_setup.py  test_folder_validator.py  test_llm_client.py  test_match_recommendation_llm.py  test_multi_provider.py  test_opportunity_state.py  test_privacy_removed_from_main_flow.py  test_proposal_context.py  test_provider_models.py  test_scoring.py  test_screenshot_upload.py  test_settings_reload.py  test_ui_smoke.py  test_verification.py
