# Packaging metadata for the Upwork Proposal Strategist.
#
# Purpose: make the project a PROPER importable package so the app runs with
# NO manual PYTHONPATH. After `pip install -e .` the `app` package and the
# `desktop_app` launcher import from anywhere.
#
# Dependencies are intentionally NOT duplicated here. The pinned, single source
# of truth is requirements.txt, which is what the first-run bootstrap installs.
# Declaring them again here would invite drift. The app runs in the browser, so
# there is no native-window dependency stack to mirror.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "upwork-proposal-strategist"
version = "1.0.0"
description = "Local-first desktop app that scores Upwork jobs against your dossier and drafts grounded proposals."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []  # see requirements.txt (pinned, single source of truth)

[project.scripts]
# Lets a developer launch the app (browser) with a bare `upwork-strategist`.
upwork-strategist = "desktop_app:main"

[tool.setuptools]
# desktop_app.py lives at the repo root as a single module (the launcher).
py-modules = ["desktop_app"]

[tool.setuptools.packages.find]
# Ship the application package (and its subpackages); leave tests out.
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
